c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/extra_credit/prefix_incr_void.c
// Can't apply prefix ++/-- to void lvalue
extern void *x;

int main(void) {
    ++(*x);
    return 0;
}